Fix layout issues

--- a/src/components/FeaturedCategories/FeaturedCategories.scss
+++ b/src/components/FeaturedCategories/FeaturedCategories.scss
@@ -1,8 +1,4 @@
 .featured-categories {
-  & > div {
-    flex: 1;
-  }
-
   &:first-of-type {
     padding-top: 75px;
   }
